# kairos

./: CONTRIBUTING.md  DEVELOPMENT_STATUS.yaml  README.md  kairos.cabal  stack.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: development-guide.md
scripts/: add_to_project.sh  label_issues.sh  setup_sprint1.sh  task_manager.py
src/Kairos/Core/: Types.hs
